fix: avoid text overflow and image overlaps

--- a/scss/_embed.scss
+++ b/scss/_embed.scss
@@ -13,6 +13,7 @@
     inline-size: fit-content;
     line-height: normal;
     max-inline-size: 32.25rem;
+    overflow-wrap: anywhere;
     padding-block: 0.5rem 1rem;
     padding-inline: 0.75rem 1rem;
 
@@ -51,7 +52,7 @@
 
     &-thumbnail {
         grid-column: 2;
-        grid-row: 1 / span 6;
+        grid-row: 1 / span 4;
         margin-block-start: 0.5rem;
         margin-inline-start: 1rem;
         min-block-size: 5rem;
